// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`přihlaš a zase odhlaš 1`] = `
Object {
  "code": "ok",
  "status": "uloženo v pořádku",
}
`;

exports[`přihlaš a zase odhlaš 2`] = `
Object {
  "code": "ok",
  "status": "uloženo v pořádku",
}
`;

exports[`přihlaš a zase odhlaš 3`] = `
Array [
  Object {
    "__v": 0,
    "ucasti": Array [
      Object {
        "platby": Array [],
        "poznamky": Array [],
        "rok": 2018,
        "ubytovani": Object {},
        "udaje": Object {
          "jmeno": "František",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`ročník neexistuje 1`] = `
Object {
  "code": "neexistuje",
  "status": "Ročník JCM pro rok 2016 není vypsán.",
}
`;

exports[`ročník neexistuje 2`] = `
Array [
  Object {
    "__v": 0,
    "ucasti": Array [
      Object {
        "platby": Array [],
        "poznamky": Array [],
        "rok": 2016,
        "udaje": Object {
          "jmeno": "František",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`saveUbytovani [not authenticated] 1`] = `
Object {
  "code": "authentication token invalid",
  "status": "Špatný ověřovací token. Zkus se přihlásit znovu. Detaily: JsonWebTokenError: jwt must be provided",
}
`;

exports[`ubytování nevypsáno 1`] = `
Object {
  "code": "neexistuje",
  "status": "Nelze se přihlásit na ubytování v sobotu. Není vypsáno.",
}
`;

exports[`ubytování nevypsáno 2`] = `
Array [
  Object {
    "__v": 0,
    "ucasti": Array [
      Object {
        "platby": Array [],
        "poznamky": Array [],
        "rok": 2018,
        "udaje": Object {
          "jmeno": "František",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`vytvoř minimálního účastníka 1`] = `
Object {
  "code": "ok",
  "status": "uloženo v pořádku",
}
`;

exports[`vytvoř minimálního účastníka 2`] = `
Array [
  Object {
    "__v": 0,
    "ucasti": Array [
      Object {
        "platby": Array [],
        "poznamky": Array [],
        "rok": 2017,
        "ubytovani": Object {
          "pátek": Object {
            "prespano": false,
            "prihlaseno": true,
          },
          "sobota": Object {
            "prespano": true,
            "prihlaseno": true,
          },
        },
        "udaje": Object {
          "jmeno": "František",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`zapiš nepřespáno 1`] = `
Object {
  "code": "ok",
  "status": "uloženo v pořádku",
}
`;

exports[`zapiš nepřespáno 2`] = `
Array [
  Object {
    "__v": 0,
    "ucasti": Array [
      Object {
        "platby": Array [],
        "poznamky": Array [],
        "rok": 2018,
        "ubytovani": Object {
          "pátek": Object {
            "prespano": false,
          },
        },
        "udaje": Object {
          "jmeno": "František",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`účastník neexistuje 1`] = `
Object {
  "code": "neexistuje",
  "status": "Účastník s id 41224d776a326fb40f000001 neexistuje.",
}
`;
